--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,38 @@
+.blogItem {
+  padding: 10px;
+  width: 250px;
+  margin: 10px auto;
+  color: blue;
+  border: 1px solid red;
+}
+
+.border {
+  border: 1px solid blue;
+  padding: 10px;
+  width: 400px;
+  margin: 50px auto;
+}
+
+.blue {
+  border-color: blue;
+}
+
+.red {
+  border-color: red;
+
+}
+
+.green {
+  border-color: green;
+
+}
+
+h2{
+  border-bottom: 1px solid lightgray;
+}
+
+/*-----------------------------------------*/
+
 .App {
   text-align: center;
 }
@@ -9,7 +44,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 30s linear;
   }
 }
 
@@ -32,6 +67,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
