--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,144 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #212529;
+  ;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.border {
+  border: 1px solid blue;
+  padding: 10px;
+  max-width: 400px;
+  margin: 20px auto;
+}
+
+.blue {
+  border-color: blue;
+}
+
+.red {
+  border-color: red;
+}
+
+.green {
+  border-color: green;
+}
+
+h1,
+h2 {
+  border-bottom: 1px solid lightgray;
+}
+
+h1 {
+  color: brown;
+}
+
+h2 {
+  color: darkblue;
+}
+
+h3 {
+  color: #2a2d30;
+  ;
+}
+
+ul,
+li {
+  width: 200px;
+  text-align: start;
+  margin: 0 auto;
+}
+
+button {
+  cursor: pointer;
+  padding: 0.7rem 1.6rem;
+  margin: 0.3rem;
+  color: white;
+  border: none;
+  border-radius: 0.3rem;
+  color: #fff;
+  background-color: #6c757d;
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+button:hover {
+  background-color: #5C6268;
+}
+
+label{
+  font-weight: 500;
+
+}
+
+input {
+  width: 50%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  border-radius: 0.3rem;
+
+}
+
+hr {
+
+  border: 0.2px solid #d6d6d6;
+}
+
+/*-----------------------------------------*/
+
+.App {
+  text-align: center;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 30s linear;
+  }
+}
+
+.App-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  background-color: #282c34;
+  color: white;
+  font-size: calc(10px + 2vmin);
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
