--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,7 @@ hr {
   border: 0.2px solid #d6d6d6;
 }
 
+
 /*-----------------------------------------*/
 
 .App {
@@ -123,7 +124,7 @@ hr {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
