--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #212529;
-  ;
+  line-height: 1.5;
+  padding-bottom: 50px;
 }
 
 code {
@@ -15,10 +20,64 @@ code {
     monospace;
 }
 
+.App {
+  text-align: center;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.App-header {
+  display: flexbox;
+  font-size: calc(16px + 2vmin);
+  color: white;
+  background-color: #282c34;
+  align-items: center;
+  justify-content: center;
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 10px;
+  margin-bottom: 15px;
+}
+
+.Nav {
+  font-weight: 500;
+  font-size: calc(10px + 1vmin);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 15px 0;
+}
+
+.App-link {
+  color: #61dafb;
+  text-decoration: none;
+  transition: all 0.3s ease 0s;
+}
+
+.App-link:hover {
+  color: #029dc4;
+}
+
+.footer {
+  background-color: #282c34;
+  color: #d6d6d6;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+/*-----------------------------------------*/
 
 .border {
   border: 1px solid blue;
-  padding: 10px;
+  padding: 20px;
   max-width: 400px;
   margin: 20px auto;
 }
@@ -35,9 +94,12 @@ code {
   border-color: green;
 }
 
+/*-----------------------------------------*/
+
 h1,
 h2 {
   border-bottom: 1px solid lightgray;
+  padding-bottom: 5px;
 }
 
 h1 {
@@ -50,7 +112,6 @@ h2 {
 
 h3 {
   color: #2a2d30;
-  ;
 }
 
 ul,
@@ -61,89 +122,37 @@ li {
 }
 
 button {
+  font-weight: 500;
+  font-size: 1.1rem;
+  color: #fff;
+  background-color: #6c757d;
   cursor: pointer;
-  padding: 0.7rem 1.6rem;
+  padding: 0.6rem 1.7rem;
   margin: 0.3rem;
   color: white;
   border: none;
   border-radius: 0.3rem;
-  color: #fff;
-  background-color: #6c757d;
-  font-weight: 500;
-  font-size: 1rem;
 }
 
 button:hover {
   background-color: #5C6268;
 }
 
-label{
+label {
   font-weight: 500;
-
 }
 
 input {
+  background-color: #fff;
+  color: #495057;
+  border: 1px solid #ced4da;
+  border-radius: 0.3rem;
   width: 50%;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
-  color: #495057;
-  background-color: #fff;
-  border: 1px solid #ced4da;
-  border-radius: 0.3rem;
-
 }
 
 hr {
-
   border: 0.2px solid #d6d6d6;
-}
-
-
-/*-----------------------------------------*/
-
-.App {
-  text-align: center;
-  max-width: 700px;
-  margin: 0 auto;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 30s linear;
-  }
-}
-
-.App-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: sticky;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 70px;
-  background-color: #282c34;
-  color: white;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
 }
