--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -42,7 +42,7 @@ code {
 }
 
 .Nav {
-  font-size: calc(10px + 1vmin);
+  font-size: calc(9px + 1vmin);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -54,9 +54,9 @@ code {
 .App-link {
   color: #61dafb;
   text-decoration: none;
-  transition: all 0.3s ease 0s;
-  padding: 10px 20px;
+  padding: 10px;
   border-bottom: 4px solid #282c34;
+  transition: all 0.3s ease 0s;
 }
 
 .App-link:hover {
@@ -64,12 +64,35 @@ code {
   border-bottom: 4px solid #61dafb;
 }
 
-.activeClassName{
+.active {
   color: #b9f1ff;
-  text-decoration: none;
-  transition: all 0.3s ease 0s;
   padding: 10px 20px;
   border-bottom: 4px solid #61dafb;
+  transition: all 0.3s ease 0s;
+}
+
+.pageNotFound {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 80px;
+  color: #6c757d;
+  font-weight: 100;
+  height: 70vh;
+  padding: 25%;
+}
+
+.subLink {
+  padding: 5px 10px;
+  margin: 5px;
+  font-weight: 600;
+  text-decoration: none;
+  border: 1px solid white;
+}
+
+.subLink:hover {
+  border: 1px solid royalblue;
+  border-radius: 5px;
 }
 
 .footer {
@@ -101,6 +124,7 @@ code {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -133,7 +157,7 @@ code {
 h1,
 h2 {
   border-bottom: 1px solid lightgray;
-  padding-bottom: 5px;
+  margin: 10px;
 }
 
 h1 {
@@ -192,5 +216,9 @@ hr {
   border: 0.2px solid #d6d6d6;
 }
 
-/*-----------------------------------------*/
+a {
+  text-decoration: none;
+  color: white;
+}
 
+/*-----------------------------------------*/
