--- a/src/index.css
+++ b/src/index.css
@@ -182,9 +182,10 @@ li {
 
 button {
   font-weight: 500;
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: #fff;
-  background-color: #6c757d;
+  /* background-color: #6c757d; */
+  background-color: #1e7fd4;
   cursor: pointer;
   padding: 0.5rem 1.7rem;
   margin: 0.3rem;
@@ -194,7 +195,8 @@ button {
 }
 
 button:hover {
-  background-color: #5C6268;
+  /* background-color: #5C6268; */
+  background-color: #2f94ec;
 }
 
 label {
